chore: update translations with Fink 🐦

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -252,9 +252,9 @@
 	"delegationSizeExceededDescription": "Die Delegation hat bereits die maximale Anzahl an Mitgliedern überschritten. Daher stehen dir keine Länder oder NAs mehr zur Auswahl. Bitte reduziere die Anzahl der Mitglieder, um wieder Länder oder NAs auswählen zu können und somit die Anmeldung zu ermöglichen.",
 	"noNationsAvailable": "Bei der derzeitigen Delegationsgröße sind keine weiteren Länder verfügbar.",
 	"noNSAAvailable": "Bei der derzeitigen Delegationsgröße sind keine weiteren NA verfügbar.",
-	"assistantFlowDelegateHavePartners1": "Sehr schön! Der normale Bewerbungsprozess für Delegierte und Vertreter*innen von NAs ist auf Gruppenanmeldungen von mindestens 2 Personen ausgelegt.",
-	"assistantFlowDelegateHavePartners2": "Wenn du keine Personen in deinem Umfeld kennst, die mit dir teilnehmen möchten, ist das aber kein größeres Problem.",
-	"assistantFlowDelegateHavePartners3": "Hast du Personen, mit denen du eine Gruppe bilden könntest?",
+	"assistantFlowDelegateHavePartners1": "Sehr schön! Für diese Rolle meldest du dich am besten in einer Gruppe von mindestens 2 Personen an, zum Beispiel mit Freund*innen oder Mitschüler*innen.",
+	"assistantFlowDelegateHavePartners2": "Wenn du niemanden findest, der*die mit dir teilnehmen möchte, ist das aber kein Problem!",
+	"assistantFlowDelegateHavePartners3": "Hast du schon Personen gefunden, mit denen du eine Gruppe bilden möchtest?",
 	"assistantFlowFinalCreateDelegation1": "Dann musst du jetzt zunächst eine Delegation erstellen.",
 	"assistantFlowFinalCreateDelegation2": "Anschließend kannst du deine Mitdelegierten über einen Beitrittscode oder einen magischen Link zur Anmeldung einladen.",
 	"assistantFlowFinalCreateDelegation3": "Der/die Ersteller*in wird automatisch zur Delegationsleiter*in.",
@@ -283,8 +283,8 @@
 	"assistantFlowParticipantOrSupervisor2": "Möchtest du selbst an der Konferenz teilnehmen und eine Rolle in der Simulation einnehmen? Oder bist du z. B. eine Lehrkraft und möchtest dich als Betreuer*in anmelden, ohne selbst teilzunehmen?",
 	"assistantFlowParticipantOrSupervisorAnswer1": "Ich möchte selbst an der Konferenz teilnehmen.",
 	"assistantFlowParticipantOrSupervisorAnswer2": "Ich möchte nicht selbst teilnehmen, sondern mich als Betreuer*in anmelden.",
-	"assistantFlowPartnersCreatedDelegation1": "Wunderbar! Dann bist du hier genau richtig.",
-	"assistantFlowPartnersCreatedDelegation2": "Da die Anmeldung als Gruppe auch geschlossen stattfinden muss, musst du zunächst klären, ob schon jemand in deiner Gruppe eine Delegation erstellt hat, der du beitreten kannst.",
+	"assistantFlowPartnersCreatedDelegation1": "Wunderbar! Als Gruppe seid ihr gemeinsam eine <em>Delegation</em>.",
+	"assistantFlowPartnersCreatedDelegation2": "Ihr müsst eure Gruppe gemeinsam anmelden. ",
 	"assistantFlowPartnersCreatedDelegation3": "Der/die Ersteller*in einer Delegation wird automatisch zur Delegationsleiter*in",
 	"assistantFlowPartnersCreatedDelegation4": "Hast du schon eine*n Delegationsleiter*in, der/die bereits eine Delegation erstellt hat?",
 	"assistantFlowPartnersCreatedDelegationAnswer1": "Ja, es gibt bereits eine Delegation.",
@@ -302,10 +302,10 @@
 	"assistantFlowRoleOther1": "Andere spezielle Rolle",
 	"assistantFlowRoleOther2": "Auf einigen Konferenzen gibt es spezielle Rollen, zum Beispiel die <em>Richter*innen am Internationalen Gerichtshof</em> oder besondere Gremien, die sich mit einer Krise befassen.",
 	"assistantFlowRoleOther3": "Ob es dieses Jahr solche Angebote gibt, erfährst du auf der Website der Konferenz.",
-	"assistantFlowRoleAnswer1": "Ich möchte als Delegierte*r eines Landes teilnehmen.",
-	"assistantFlowRoleAnswer2": "Ich möchte als Vertreter*in eines Nichtstaatlichen Akteurs teilnehmen.",
+	"assistantFlowRoleAnswer1": "Ich möchte als Delegierte*r eines Staates teilnehmen.",
+	"assistantFlowRoleAnswer2": "Ich möchte als Vertreter*in eines nichtstaatlichen Akteurs teilnehmen.",
 	"assistantFlowRoleAnswer3": "Ich möchte als Journalist*in der Konferenzpresse teilnehmen.",
-	"assistantFlowRoleAnswer4": "Ich möchte eine andere spezielle Rolle einnehmen (wenn verfügbar).",
+	"assistantFlowRoleAnswer4": "Ich möchte eine andere spezielle Rolle einnehmen.",
 	"assistantFlowSupervisorUsersAlreadyRegistered1": "Sehr schön! Als betreuende Person kannst du nur bereits erstellte Delegationen überwachen.",
 	"assistantFlowSupervisorUsersAlreadyRegistered2": "Wichtig: Anders als früher müssen deine Schüler*innen die Delegation selbst erstellen. Du kannst den Delegationen anschließend mit dem Delegationscode als betreuende Person beitreten.",
 	"assistantFlowSupervisorUsersAlreadyRegistered3": "Haben deine Schüler*innen bereits Delegationen erstellt?",
