chore: update translations with Fink 🐦

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -284,11 +284,11 @@
 	"assistantFlowParticipantOrSupervisorAnswer1": "Ich möchte selbst an der Konferenz teilnehmen.",
 	"assistantFlowParticipantOrSupervisorAnswer2": "Ich möchte nicht selbst teilnehmen, sondern mich als Betreuer*in anmelden.",
 	"assistantFlowPartnersCreatedDelegation1": "Wunderbar! Als Gruppe seid ihr gemeinsam eine <em>Delegation</em>.",
-	"assistantFlowPartnersCreatedDelegation2": "Ihr müsst eure Gruppe gemeinsam anmelden. ",
-	"assistantFlowPartnersCreatedDelegation3": "Der/die Ersteller*in einer Delegation wird automatisch zur Delegationsleiter*in",
-	"assistantFlowPartnersCreatedDelegation4": "Hast du schon eine*n Delegationsleiter*in, der/die bereits eine Delegation erstellt hat?",
-	"assistantFlowPartnersCreatedDelegationAnswer1": "Ja, es gibt bereits eine Delegation.",
-	"assistantFlowPartnersCreatedDelegationAnswer2": "Nein, noch hat niemand eine Delegation erstellt.",
+	"assistantFlowPartnersCreatedDelegation2": "Ihr müsst eure Delegation zusammen anmelden. Deshalb musst du zuerst herausfinden, ob schon jemand aus deiner Gruppe eine Delegation erstellt hat.",
+	"assistantFlowPartnersCreatedDelegation3": "Die Person, die eure Delegation erstellt hat, ist automatisch eure <em>Delegationsleitung</em>.",
+	"assistantFlowPartnersCreatedDelegation4": "Hast du schon eine Delegationsleitung, die für eure Gruppe eine Delegation erstellt hat?",
+	"assistantFlowPartnersCreatedDelegationAnswer1": "Ja, es gibt schon eine Delegation",
+	"assistantFlowPartnersCreatedDelegationAnswer2": "Nein, noch niemand von uns hat eine Delegation erstellt",
 	"assistantFlowRole1": "Herzlich willkommen – wir freuen uns auf dich! Du musst dir zunächst aussuchen, welche Rolle du auf der Konferenz einnehmen möchtest.",
 	"assistantFlowRole2": "Du kannst dir eine der folgenden Rollen aussuchen:",
 	"assistantFlowRoleDelegate1": "Delegierte*r eines Staates",
