chore: update translations with Fink 🐦

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -268,10 +268,10 @@
 	"assistantFlowFinalIndividualDelegate3": "Die Bewerbung nimmt dann zur Ende der Anmeldephase an einem Matchmaking-Prozess teil, bei dem dir ein freier Platz in einer Delegation oder als NA zugewiesen wird.",
 	"assistantFlowFinalIndividualDelegate4": "Bitte beachte, dass deine Wunschmöglichkeiten bei einer Einzelbewerbung sehr eingeschränkt sind. Wenn du dich alleine bewirbst, dann bekommst du eine freie Rolle zugeteilt.",
 	"assistantFlowFinalIndividualDelegate5": "Bei Fragen oder Problemen wende dich bitte an die Teilnehmendenbetreuung des Projektes. Du findest die Kontaktdaten auf der Konferenz-Website.",
-	"assistantFlowFinalJoinDelegation1": "Super! Dann musst du jetzt deine Delegationsleitung bitten, dir den Beitrittscode zu geben.",
-	"assistantFlowFinalJoinDelegation2": "Mit dem Beitrittscode kannst du dann der Delegation beitreten.",
-	"assistantFlowFinalJoinDelegation3": "Alternativ kann dir auch die Delegationsleitung einen magischen Link zur Anmeldung schicken.",
-	"assistantFlowFinalJoinDelegation4": "Bei Fragen oder Problemen wende dich bitte an die Teilnehmendenbetreuung des Projektes. Du findest die Kontaktdaten auf der Website.",
+	"assistantFlowFinalJoinDelegation1": "Super! Dann musst du jetzt deine Delegationsleitung bitten, dir den <em>Beitrittscode</em> zu geben.",
+	"assistantFlowFinalJoinDelegation2": "Mit dem Beitrittscode kannst du der Delegation beitreten.",
+	"assistantFlowFinalJoinDelegation3": "Die Delegationsleitung kann dir zum Beitreten auch einen magischen Link schicken, den du einfach anklicken kannst.",
+	"assistantFlowFinalJoinDelegation4": "Bei Fragen oder Problemen wende dich gern an die Teilnehmendenbetreuung. Du findest die Kontaktdaten auf der Konferenzwebsite.",
 	"assistantFlowFinalSupervisor1": "Dann mussst du jetzt die Delegationsleiter*innen (also die jeweiligen Ersteller*innen der Delegation) bitten, dir den Beitrittscode zu geben.",
 	"assistantFlowFinalSupervisor2": "Anschließend kannst du dich als Betreuer*in anmelden.",
 	"assistantFlowFinalSupervisor3": "Du kannst mehrere Delegationscodes auf einmal angeben und es ist auch auf dem gleichen Weg möglich, weiteren Delegationen nachträglich beizutreten.",
