chore: update translations with Fink 🐦

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -258,7 +258,7 @@
 	"assistantFlowFinalCreateDelegation1": "Dann musst du jetzt zunächst eine Delegation erstellen.",
 	"assistantFlowFinalCreateDelegation2": "Anschließend kannst du deine Mitdelegierten über einen Beitrittscode oder einen magischen Link zur Anmeldung einladen.",
 	"assistantFlowFinalCreateDelegation3": "Der/die Ersteller*in wird automatisch zur Delegationsleiter*in.",
-	"assistantFlowFinalCreateDelegation4": "Bei Fragen oder Problemen wende dich bitte an die Teilnehmendenbetreuung des Projektes. Du findest die Kontaktdaten auf der Konferenz-Website.",
+	"assistantFlowFinalCreateDelegation4": "Bei Fragen oder Problemen wende dich gern an die Teilnehmendenbetreuung. Du findest die Kontaktdaten auf der Konferenzwebsite.",
 	"assistantFlowFinalIndividual1": "Als Journalist*in oder für andere spezielle Rollen kannst du dich nur als Einzelperson bewerben. Du findest die Auswahlmöglichkeit für deine gewünschte Rolle in der Kategorie <em>Einzelbewerbung</em>.",
 	"assistantFlowFinalIndividual2": "Wir können dir natürlich nicht garantieren, dass du deine gewünschte Rolle tatsächlich bekommst.",
 	"assistantFlowFinalIndividual3": "Sollten wir deinen Wunsch bei der Zuteilung nicht berücksichtigen können, wird die Teilnehmendenbetreuung Kontakt aufnehmen und mit dir Alternativen besprechen.",
