chore: update translations with Fink 🐦

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -255,9 +255,9 @@
 	"assistantFlowDelegateHavePartners1": "Sehr schön! Für diese Rolle meldest du dich am besten in einer Gruppe von mindestens 2 Personen an, zum Beispiel mit Freund*innen oder Mitschüler*innen.",
 	"assistantFlowDelegateHavePartners2": "Wenn du niemanden findest, der*die mit dir teilnehmen möchte, ist das aber kein Problem!",
 	"assistantFlowDelegateHavePartners3": "Hast du schon Personen gefunden, mit denen du eine Gruppe bilden möchtest?",
-	"assistantFlowFinalCreateDelegation1": "Dann musst du jetzt zunächst eine Delegation erstellen.",
-	"assistantFlowFinalCreateDelegation2": "Anschließend kannst du deine Mitdelegierten über einen Beitrittscode oder einen magischen Link zur Anmeldung einladen.",
-	"assistantFlowFinalCreateDelegation3": "Der/die Ersteller*in wird automatisch zur Delegationsleiter*in.",
+	"assistantFlowFinalCreateDelegation1": "Dann muss jetzt jemand von euch – vielleicht ja du? – eine neue Delegation erstellen. Diese Person wird dann automatisch zur <em>Delegationsleitung</em>.",
+	"assistantFlowFinalCreateDelegation2": "Die Delegationsleitung kann anschließend den Rest eurer Gruppe zum Beitreten einladen, indem sie den Beitrittscode oder den magischen Link weitergibt.",
+	"assistantFlowFinalCreateDelegation3": "Wenn du die Delegationsleitung für eure Gruppe übernehmen möchtest, kannst du jetzt gleich anfangen, indem du auf „Neue Delegation erstellen“ klickst.",
 	"assistantFlowFinalCreateDelegation4": "Bei Fragen oder Problemen wende dich gern an die Teilnehmendenbetreuung. Du findest die Kontaktdaten auf der Konferenzwebsite.",
 	"assistantFlowFinalIndividual1": "Als Journalist*in oder für andere spezielle Rollen kannst du dich nur als Einzelperson bewerben. Du findest die Auswahlmöglichkeit für deine gewünschte Rolle in der Kategorie <em>Einzelbewerbung</em>.",
 	"assistantFlowFinalIndividual2": "Wir können dir natürlich nicht garantieren, dass du deine gewünschte Rolle tatsächlich bekommst.",
