chore: update translations with Fink 🐦

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -263,11 +263,11 @@
 	"assistantFlowFinalIndividual2": "Wir können dir natürlich nicht garantieren, dass du deine gewünschte Rolle tatsächlich bekommst.",
 	"assistantFlowFinalIndividual3": "Sollten wir deinen Wunsch bei der Zuteilung nicht berücksichtigen können, wird die Teilnehmendenbetreuung Kontakt aufnehmen und mit dir Alternativen besprechen.",
 	"assistantFlowFinalIndividual4": "Bei Fragen oder Problemen wende dich bitte an die Teilnehmendenbetreuung der Konferenz. Du findest die Kontaktdaten auf der Konferenz-Website.",
-	"assistantFlowFinalIndividualDelegate1": "Kein Problem! Auch Einzelanmeldungen für Delegierte und NAs sind möglich.",
-	"assistantFlowFinalIndividualDelegate2": "In der Auswahl unter <em>Einzelbewerbung</em> findest du u.a. auch den Punkt<em>Einzelanmeldung als Delegierte*r</em>. Hier kannst du sich anmelden.",
-	"assistantFlowFinalIndividualDelegate3": "Die Bewerbung nimmt dann zur Ende der Anmeldephase an einem Matchmaking-Prozess teil, bei dem dir ein freier Platz in einer Delegation oder als NA zugewiesen wird.",
-	"assistantFlowFinalIndividualDelegate4": "Bitte beachte, dass deine Wunschmöglichkeiten bei einer Einzelbewerbung sehr eingeschränkt sind. Wenn du dich alleine bewirbst, dann bekommst du eine freie Rolle zugeteilt.",
-	"assistantFlowFinalIndividualDelegate5": "Bei Fragen oder Problemen wende dich bitte an die Teilnehmendenbetreuung des Projektes. Du findest die Kontaktdaten auf der Konferenz-Website.",
+	"assistantFlowFinalIndividualDelegate1": "Das ist kein Problem! Auch Einzelanmeldungen als Delegierte*r eines Staates oder Vertreter*in eines nichtstaatlichen Akteurs sind möglich.",
+	"assistantFlowFinalIndividualDelegate2": "Unter <em>Einzeln anmelden</em> findest du den Punkt<em>Einzelanmeldung als Delegierte*r oder NA-Vertreter*in</em>. Hier kannst du dich anmelden.",
+	"assistantFlowFinalIndividualDelegate3": "Bei einer Einzelanmeldung kannst du leider keine Rollenwünsche für einen bestimmten Staat angeben.",
+	"assistantFlowFinalIndividualDelegate4": "Nach dem Ende der Anmeldephase wird dir die Teilnehmendenbetreuung einen freien Staat oder einen freien nichtstaatlichen Akteur zuweisen.",
+	"assistantFlowFinalIndividualDelegate5": "Bei Fragen oder Problemen wende dich gern an die Teilnehmendenbetreuung. Du findest die Kontaktdaten auf der Konferenzwebsite.",
 	"assistantFlowFinalJoinDelegation1": "Super! Dann musst du jetzt deine Delegationsleitung bitten, dir den <em>Beitrittscode</em> zu geben.",
 	"assistantFlowFinalJoinDelegation2": "Mit dem Beitrittscode kannst du der Delegation beitreten.",
 	"assistantFlowFinalJoinDelegation3": "Die Delegationsleitung kann dir zum Beitreten auch einen magischen Link schicken, den du einfach anklicken kannst.",
