chore: update translations with Fink 🐦

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -41,7 +41,7 @@
 	"unknownRegistrationStatus": "Anmeldestatus unbekannt",
 	"alreadRegistered": "Bereits angemeldet",
 	"RegistrationNotPossible": "Anmeldung nicht möglich",
-	"conferenceSignupIntroduction": "Auf der Konferenz gibt es verschiedene Rollen. Für einen <strong>Staat</strong> oder eine*n <strong>nichtstaatliche*n Akteur*in</strong> meldest du dich als Team von mindestens 2 Personen an. Für <strong>spezielle Rollen</strong> wie die Konferenzpresse bewirbst du dich alleine.",
+	"conferenceSignupIntroduction": "Auf der Konferenz gibt es verschiedene Rollen. Für einen <strong>Staat</strong> oder eine*n <strong>nichtstaatliche*n Akteur*in</strong> meldest du dich als Gruppe von mindestens 2 Personen an, für <strong>spezielle Rollen</strong> wie die Konferenzpresse als Einzelperson.",
 	"signUpAssistant": "Unsicher, wie du dich anmelden sollst?",
 	"signUpAssistantDescription": "Wenn du nicht sicher bist, welche Anmeldung für dich die richtige ist, kannst du unseren Anmeldeassistenten benutzen.",
 	"openAssistant": "Assistent starten",
@@ -165,7 +165,7 @@
 	"userId": "Benutzer-ID",
 	"edit": "Bearbeiten",
 	"deleteAccountGPDR": "Wenn du dein Konto DSGVO-konform löschen lassen möchtest, wende dich bitte an deine Teilnehmendenbetreuung oder an <a href='mailto:support@dmun.de' class='link underline'>support@dmun.de</a>.",
-	"receiveGeneralInformation": "E-Mails mit Informationen zu DMUN Projekten erhalten",
+	"receiveGeneralInformation": "E-Mails zu MUN-SH, MUNBW und anderen DMUN-Projekten erhalten",
 	"receiveJoinTeamInformation": "E-Mails mit Ausschreibungen für Teampositionen erhalten",
 	"activeMembers": "Aktive Mitglieder",
 	"removeMember": "Mitglied entfernen",
@@ -259,10 +259,10 @@
 	"assistantFlowFinalCreateDelegation2": "Die Delegationsleitung kann anschließend den Rest eurer Gruppe zum Beitreten einladen, indem sie den Beitrittscode oder den magischen Link weitergibt.",
 	"assistantFlowFinalCreateDelegation3": "Wenn du die Delegationsleitung für eure Gruppe übernehmen möchtest, kannst du jetzt gleich anfangen, indem du auf „Neue Delegation erstellen“ klickst.",
 	"assistantFlowFinalCreateDelegation4": "Bei Fragen oder Problemen wende dich gern an die Teilnehmendenbetreuung. Du findest die Kontaktdaten auf der Konferenzwebsite.",
-	"assistantFlowFinalIndividual1": "Als Journalist*in oder für andere spezielle Rollen kannst du dich nur als Einzelperson bewerben. Du findest die Auswahlmöglichkeit für deine gewünschte Rolle in der Kategorie <em>Einzelbewerbung</em>.",
-	"assistantFlowFinalIndividual2": "Wir können dir natürlich nicht garantieren, dass du deine gewünschte Rolle tatsächlich bekommst.",
-	"assistantFlowFinalIndividual3": "Sollten wir deinen Wunsch bei der Zuteilung nicht berücksichtigen können, wird die Teilnehmendenbetreuung Kontakt aufnehmen und mit dir Alternativen besprechen.",
-	"assistantFlowFinalIndividual4": "Bei Fragen oder Problemen wende dich bitte an die Teilnehmendenbetreuung der Konferenz. Du findest die Kontaktdaten auf der Konferenz-Website.",
+	"assistantFlowFinalIndividual1": "Für diese Rolle kannst du dich nur als Einzelperson anmelden. Klicke hierfür einfach auf <em>Einzeln anmelden</em> und wähle deine gewünschte Rolle aus.",
+	"assistantFlowFinalIndividual2": "Wir bemühen uns, so viele Rollenwünsche wie möglich zu erfüllen.",
+	"assistantFlowFinalIndividual3": "Falls wir deinen Rollenwunsch nicht erfüllen können, werden wir dir nach Ende der Anmeldefrist eine Alternative vorschlagen.",
+	"assistantFlowFinalIndividual4": "Bei Fragen oder Problemen wende dich gern an die Teilnehmendenbetreuung. Du findest die Kontaktdaten auf der Konferenzwebsite.",
 	"assistantFlowFinalIndividualDelegate1": "Das ist kein Problem! Auch Einzelanmeldungen als Delegierte*r eines Staates oder Vertreter*in eines nichtstaatlichen Akteurs sind möglich.",
 	"assistantFlowFinalIndividualDelegate2": "Unter <em>Einzeln anmelden</em> findest du den Punkt<em>Einzelanmeldung als Delegierte*r oder NA-Vertreter*in</em>. Hier kannst du dich anmelden.",
 	"assistantFlowFinalIndividualDelegate3": "Bei einer Einzelanmeldung kannst du leider keine Rollenwünsche für einen bestimmten Staat angeben.",
