--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -272,12 +272,12 @@
 	"assistantFlowFinalJoinDelegation2": "Mit dem Beitrittscode kannst du der Delegation beitreten.",
 	"assistantFlowFinalJoinDelegation3": "Die Delegationsleitung kann dir zum Beitreten auch einen magischen Link schicken, den du einfach anklicken kannst.",
 	"assistantFlowFinalJoinDelegation4": "Bei Fragen oder Problemen wende dich gern an die Teilnehmendenbetreuung. Du findest die Kontaktdaten auf der Konferenzwebsite.",
-	"assistantFlowFinalSupervisor1": "Dann mussst du jetzt die Delegationsleiter*innen (also die jeweiligen Ersteller*innen der Delegation) bitten, dir den Beitrittscode zu geben.",
+	"assistantFlowFinalSupervisor1": "Dann musst du jetzt die Delegationsleitung (also die Person, die die Delegation erstellt hat) bitten, dir den Beitrittscode zu geben.",
 	"assistantFlowFinalSupervisor2": "Anschließend kannst du dich als Betreuer*in anmelden.",
-	"assistantFlowFinalSupervisor3": "Du kannst mehrere Delegationscodes auf einmal angeben und es ist auch auf dem gleichen Weg möglich, weiteren Delegationen nachträglich beizutreten.",
-	"assistantFlowFinalSupervisor4": "Bei Fragen oder Problemen wende dich bitte an die Teilnehmendenbetreuung des Projektes. Du findest die Kontaktdaten auf der Konferenz-Website.",
-	"assistantFlowFinalSupervisorAnswerWait1": "Dann bestimmst du bitte für jede Delegation eine*n Delegationsleiter*in und lass deine Schüler*innen die Delegation anlegen.",
-	"assistantFlowFinalSupervisorAnswerWait2": "Anschließend erhalten die Delegationsmitglieder einen Beitrittscode, mit dem du dich der Delegation als Betreuer*in anschließen kannst.",
+	"assistantFlowFinalSupervisor3": "Wenn deine Schüler*innen sich auf mehrere Delegationen aufgeteilt haben, kannst du natürlich alle davon betreuen. Du kannst bei deiner Anmeldung alle Beitrittscodes auf einmal angeben oder auch nachträglich welche hinzufügen.",
+	"assistantFlowFinalSupervisor4": "Bei Fragen oder Problemen wende dich gern an die Teilnehmendenbetreuung. Du findest die Kontaktdaten auf der Konferenzwebsite.",
+	"assistantFlowFinalSupervisorAnswerWait1": "Dann bestimme bitte eine*n Schüler*in zur Delegationsleitung und lasse diese*n die Delegation anlegen. Danach kannst du der Delegation als Betreuer*in beitreten, indem du dir von der Delegationsleitung den Beitrittscode geben lässt.",
+	"assistantFlowFinalSupervisorAnswerWait2": "Wenn du deine Schüler*innen auf mehrere Delegationen aufteilen möchtest, kannst du den Prozess mehrfach wiederholen. Du kannst dann allen Delegationen als Betreuer*in beitreten.",
 	"assistantFlowFinalSupervisorAnswerWait3": "Bei Fragen oder Problemen wende dich bitte an die Teilnehmendenbetreuung des Projektes. Du findest die Kontaktdaten auf der Konferenz-Website.",
 	"assistantFlowParticipantOrSupervisor1": "Hallo! Ich bin der Anmeldeassistent von MUNify, der gemeinsamen Anmeldeplattform für MUN-SH und MUNBW. Ich helfe dir bei der Wahl der richtigen Anmeldung.",
 	"assistantFlowParticipantOrSupervisor2": "Möchtest du selbst an der Konferenz teilnehmen und eine Rolle in der Simulation einnehmen? Oder bist du z. B. eine Lehrkraft und möchtest dich als Betreuer*in anmelden, ohne selbst teilzunehmen?",
@@ -306,9 +306,9 @@
 	"assistantFlowRoleAnswer2": "Ich möchte als Vertreter*in eines nichtstaatlichen Akteurs teilnehmen.",
 	"assistantFlowRoleAnswer3": "Ich möchte als Journalist*in der Konferenzpresse teilnehmen.",
 	"assistantFlowRoleAnswer4": "Ich möchte eine andere spezielle Rolle einnehmen.",
-	"assistantFlowSupervisorUsersAlreadyRegistered1": "Sehr schön! Als betreuende Person kannst du nur bereits erstellte Delegationen überwachen.",
-	"assistantFlowSupervisorUsersAlreadyRegistered2": "Wichtig: Anders als früher müssen deine Schüler*innen die Delegation selbst erstellen. Du kannst den Delegationen anschließend mit dem Delegationscode als betreuende Person beitreten.",
-	"assistantFlowSupervisorUsersAlreadyRegistered3": "Haben deine Schüler*innen bereits Delegationen erstellt?",
+	"assistantFlowSupervisorUsersAlreadyRegistered1": "Sehr schön! Als Betreuer*in kannst du die von deinen Schüler*innen erstellten Delegationen beaufsichtigen.",
+	"assistantFlowSupervisorUsersAlreadyRegistered2": "Wichtig: Anders als früher kannst du als Betreuer*in keine Delegation mehr für deine Schüler*innen anlegen, sondern die Schüler*innen müssen ihre Delegation selbst erstellen! Anschließend kannst du ihr mit dem Beitrittscode als Betreuer*in beitreten.",
+	"assistantFlowSupervisorUsersAlreadyRegistered3": "Haben deine Schüler*innen bereits eine Delegation erstellt?",
 	"assistantFlowSupervisorUsersAlreadyRegisteredAnswer1": "Ja, haben sie.",
 	"assistantFlowSupervisorUsersAlreadyRegisteredAnswer2": "Nein, noch nicht.",
 	"delegationHasAlreadyApplied": "Die Delegation hat ihre Bewerbung bereits abgeschickt.",
