📚 Language improvements for the chatbot (#96)
* chore: update translations with Fink 🐦

* Update Role.svelte

* Update Role.svelte

* Update ParticipantOrSupervisor.svelte

* Update de.json

* Update en.json

* chore: update translations with Fink 🐦

* chore: update translations with Fink 🐦

* Update PartnersCreatedDelegation.svelte

* Update FinalJoinDelegation.svelte

* chore: update translations with Fink 🐦

* Update FinalJoinDelegation.svelte

* chore: update translations with Fink 🐦

* chore: update translations with Fink 🐦

* Update FinalCreateDelegation.svelte

* Update FinalCreateDelegation.svelte

* chore: update translations with Fink 🐦

* Update FinalIndividualDelegate.svelte

* chore: update translations with Fink 🐦

* Update FinalIndividual.svelte

* chore: update translations with Fink 🐦

* fix small syntax errors

---------

Co-authored-by: Tade Strehk <tade99@gmx.de>
Co-authored-by: Tade Strehk <tade@strehk.eu>

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -41,7 +41,7 @@
 	"unknownRegistrationStatus": "Anmeldestatus unbekannt",
 	"alreadRegistered": "Bereits angemeldet",
 	"RegistrationNotPossible": "Anmeldung nicht möglich",
-	"conferenceSignupIntroduction": "Auf der Konferenz gibt es verschiedene Rollen. Für einen <strong>Staat</strong> oder eine*n <strong>nichtstaatliche*n Akteur*in</strong> meldest du dich als Team von mindestens 2 Personen an. Für <strong>spezielle Rollen</strong> wie die Konferenzpresse bewirbst du dich alleine.",
+	"conferenceSignupIntroduction": "Auf der Konferenz gibt es verschiedene Rollen. Für einen <strong>Staat</strong> oder eine*n <strong>nichtstaatliche*n Akteur*in</strong> meldest du dich als Gruppe von mindestens 2 Personen an, für <strong>spezielle Rollen</strong> wie die Konferenzpresse als Einzelperson.",
 	"signUpAssistant": "Unsicher, wie du dich anmelden sollst?",
 	"signUpAssistantDescription": "Wenn du nicht sicher bist, welche Anmeldung für dich die richtige ist, kannst du unseren Anmeldeassistenten benutzen.",
 	"openAssistant": "Assistent starten",
@@ -164,7 +164,7 @@
 	"userId": "Benutzer-ID",
 	"edit": "Bearbeiten",
 	"deleteAccountGPDR": "Wenn du dein Konto DSGVO-konform löschen lassen möchtest, wende dich bitte an deine Teilnehmendenbetreuung oder an <a href='mailto:support@dmun.de' class='link underline'>support@dmun.de</a>.",
-	"receiveGeneralInformation": "E-Mails mit Informationen zu DMUN Projekten erhalten",
+	"receiveGeneralInformation": "E-Mails zu MUN-SH, MUNBW und anderen DMUN-Projekten erhalten",
 	"receiveJoinTeamInformation": "E-Mails mit Ausschreibungen für Teampositionen erhalten",
 	"activeMembers": "Aktive Mitglieder",
 	"removeMember": "Mitglied entfernen",
@@ -251,64 +251,63 @@
 	"delegationSizeExceededDescription": "Die Delegation hat bereits die maximale Anzahl an Mitgliedern überschritten. Daher stehen dir keine Länder oder NAs mehr zur Auswahl. Bitte reduziere die Anzahl der Mitglieder, um wieder Länder oder NAs auswählen zu können und somit die Anmeldung zu ermöglichen.",
 	"noNationsAvailable": "Bei der derzeitigen Delegationsgröße sind keine weiteren Länder verfügbar.",
 	"noNSAAvailable": "Bei der derzeitigen Delegationsgröße sind keine weiteren NA verfügbar.",
-	"assistantFlowDelegateHavePartners1": "Sehr schön! Der normale Bewerbungsprozess für Delegierte und Vertreter*innen von NAs ist auf Gruppenanmeldungen von mindestens 2 Personen ausgelegt.",
-	"assistantFlowDelegateHavePartners2": "Wenn du keine Personen in deinem Umfeld kennst, die mit dir teilnehmen möchten, ist das aber kein größeres Problem.",
-	"assistantFlowDelegateHavePartners3": "Hast du Personen, mit denen du eine Gruppe bilden könntest?",
-	"assistantFlowFinalCreateDelegation1": "Dann musst du jetzt zunächst eine Delegation erstellen.",
-	"assistantFlowFinalCreateDelegation2": "Anschließend kannst du deine Mitdelegierten über einen Beitrittscode oder einen magischen Link zur Anmeldung einladen.",
-	"assistantFlowFinalCreateDelegation3": "Der/die Ersteller*in wird automatisch zur Delegationsleiter*in.",
-	"assistantFlowFinalCreateDelegation4": "Bei Fragen oder Problemen wende dich bitte an die Teilnehmendenbetreuung des Projektes. Du findest die Kontaktdaten auf der Konferenz-Website.",
-	"assistantFlowFinalIndividual1": "Als Journalist*in oder für andere spezielle Rollen kannst du dich nur als Einzelperson bewerben. Du findest die Auswahlmöglichkeit für deine gewünschte Rolle in der Kategorie <em>Einzelbewerbung</em>.",
-	"assistantFlowFinalIndividual2": "Wir können dir natürlich nicht garantieren, dass du deine gewünschte Rolle tatsächlich bekommst.",
-	"assistantFlowFinalIndividual3": "Sollten wir deinen Wunsch bei der Zuteilung nicht berücksichtigen können, wird die Teilnehmendenbetreuung Kontakt aufnehmen und mit dir Alternativen besprechen.",
-	"assistantFlowFinalIndividual4": "Bei Fragen oder Problemen wende dich bitte an die Teilnehmendenbetreuung der Konferenz. Du findest die Kontaktdaten auf der Konferenz-Website.",
-	"assistantFlowFinalIndividualDelegate1": "Kein Problem! Auch Einzelanmeldungen für Delegierte und NAs sind möglich.",
-	"assistantFlowFinalIndividualDelegate2": "In der Auswahl unter <em>Einzelbewerbung</em> findest du u.a. auch den Punkt<em>Einzelanmeldung als Delegierte*r</em>. Hier kannst du sich anmelden.",
-	"assistantFlowFinalIndividualDelegate3": "Die Bewerbung nimmt dann zur Ende der Anmeldephase an einem Matchmaking-Prozess teil, bei dem dir ein freier Platz in einer Delegation oder als NA zugewiesen wird.",
-	"assistantFlowFinalIndividualDelegate4": "Bitte beachte, dass deine Wunschmöglichkeiten bei einer Einzelbewerbung sehr eingeschränkt sind. Wenn du dich alleine bewirbst, dann bekommst du eine freie Rolle zugeteilt.",
-	"assistantFlowFinalIndividualDelegate5": "Bei Fragen oder Problemen wende dich bitte an die Teilnehmendenbetreuung des Projektes. Du findest die Kontaktdaten auf der Konferenz-Website.",
-	"assistantFlowFinalJoinDelegation1": "Super! Dann musst du jetzt deine Delegationsleitung bitten, dir den Beitrittscode zu geben.",
-	"assistantFlowFinalJoinDelegation2": "Mit dem Beitrittscode kannst du dann der Delegation beitreten.",
-	"assistantFlowFinalJoinDelegation3": "Alternativ kann dir auch die Delegationsleitung einen magischen Link zur Anmeldung schicken.",
-	"assistantFlowFinalJoinDelegation4": "Bei Fragen oder Problemen wende dich bitte an die Teilnehmendenbetreuung des Projektes. Du findest die Kontaktdaten auf der Website.",
-	"assistantFlowFinalSupervisor1": "Dann mussst du jetzt die Delegationsleiter*innen (also die jeweiligen Ersteller*innen der Delegation) bitten, dir den Beitrittscode zu geben.",
+	"assistantFlowDelegateHavePartners1": "Sehr schön! Für diese Rolle meldest du dich am besten in einer Gruppe von mindestens 2 Personen an, zum Beispiel mit Freund*innen oder Mitschüler*innen.",
+	"assistantFlowDelegateHavePartners2": "Wenn du niemanden findest, der*die mit dir teilnehmen möchte, ist das aber kein Problem!",
+	"assistantFlowDelegateHavePartners3": "Hast du schon Personen gefunden, mit denen du eine Gruppe bilden möchtest?",
+	"assistantFlowFinalCreateDelegation1": "Dann muss jetzt jemand von euch – vielleicht ja du? – eine neue Delegation erstellen. Diese Person wird dann automatisch zur <em>Delegationsleitung</em>.",
+	"assistantFlowFinalCreateDelegation2": "Die Delegationsleitung kann anschließend den Rest eurer Gruppe zum Beitreten einladen, indem sie den Beitrittscode oder den magischen Link weitergibt.",
+	"assistantFlowFinalCreateDelegation3": "Wenn du die Delegationsleitung für eure Gruppe übernehmen möchtest, kannst du jetzt gleich anfangen, indem du auf „Neue Delegation erstellen“ klickst.",
+	"assistantFlowFinalCreateDelegation4": "Bei Fragen oder Problemen wende dich gern an die Teilnehmendenbetreuung. Du findest die Kontaktdaten auf der Konferenzwebsite.",
+	"assistantFlowFinalIndividual1": "Für diese Rolle kannst du dich nur als Einzelperson anmelden. Klicke hierfür einfach auf <em>Einzeln anmelden</em> und wähle deine gewünschte Rolle aus.",
+	"assistantFlowFinalIndividual2": "Wir bemühen uns, so viele Rollenwünsche wie möglich zu erfüllen.",
+	"assistantFlowFinalIndividual3": "Falls wir deinen Rollenwunsch nicht erfüllen können, werden wir dir nach Ende der Anmeldefrist eine Alternative vorschlagen.",
+	"assistantFlowFinalIndividual4": "Bei Fragen oder Problemen wende dich gern an die Teilnehmendenbetreuung. Du findest die Kontaktdaten auf der Konferenzwebsite.",
+	"assistantFlowFinalIndividualDelegate1": "Das ist kein Problem! Auch Einzelanmeldungen als Delegierte*r eines Staates oder Vertreter*in eines nichtstaatlichen Akteurs sind möglich.",
+	"assistantFlowFinalIndividualDelegate2": "Unter <em>Einzeln anmelden</em> findest du den Punkt<em>Einzelanmeldung als Delegierte*r oder NA-Vertreter*in</em>. Hier kannst du dich anmelden.",
+	"assistantFlowFinalIndividualDelegate3": "Bei einer Einzelanmeldung kannst du leider keine Rollenwünsche für einen bestimmten Staat angeben.",
+	"assistantFlowFinalIndividualDelegate4": "Nach dem Ende der Anmeldephase wird dir die Teilnehmendenbetreuung einen freien Staat oder einen freien nichtstaatlichen Akteur zuweisen.",
+	"assistantFlowFinalIndividualDelegate5": "Bei Fragen oder Problemen wende dich gern an die Teilnehmendenbetreuung. Du findest die Kontaktdaten auf der Konferenzwebsite.",
+	"assistantFlowFinalJoinDelegation1": "Super! Dann musst du jetzt deine Delegationsleitung bitten, dir den <em>Beitrittscode</em> zu geben.",
+	"assistantFlowFinalJoinDelegation2": "Mit dem Beitrittscode kannst du der Delegation beitreten.",
+	"assistantFlowFinalJoinDelegation3": "Die Delegationsleitung kann dir zum Beitreten auch einen magischen Link schicken, den du einfach anklicken kannst.",
+	"assistantFlowFinalJoinDelegation4": "Bei Fragen oder Problemen wende dich gern an die Teilnehmendenbetreuung. Du findest die Kontaktdaten auf der Konferenzwebsite.",
+	"assistantFlowFinalSupervisor1": "Dann musst du jetzt die Delegationsleitung (also die Person, die die Delegation erstellt hat) bitten, dir den Beitrittscode zu geben.",
 	"assistantFlowFinalSupervisor2": "Anschließend kannst du dich als Betreuer*in anmelden.",
-	"assistantFlowFinalSupervisor3": "Du kannst mehrere Delegationscodes auf einmal angeben und es ist auch auf dem gleichen Weg möglich, weiteren Delegationen nachträglich beizutreten.",
-	"assistantFlowFinalSupervisor4": "Bei Fragen oder Problemen wende dich bitte an die Teilnehmendenbetreuung des Projektes. Du findest die Kontaktdaten auf der Konferenz-Website.",
-	"assistantFlowFinalSupervisorAnswerWait1": "Dann bestimmst du bitte für jede Delegation eine*n Delegationsleiter*in und lass deine Schüler*innen die Delegation anlegen.",
-	"assistantFlowFinalSupervisorAnswerWait2": "Anschließend erhalten die Delegationsmitglieder einen Beitrittscode, mit dem du dich der Delegation als Betreuer*in anschließen kannst.",
+	"assistantFlowFinalSupervisor3": "Wenn deine Schüler*innen sich auf mehrere Delegationen aufgeteilt haben, kannst du natürlich alle davon betreuen. Du kannst bei deiner Anmeldung alle Beitrittscodes auf einmal angeben oder auch nachträglich welche hinzufügen.",
+	"assistantFlowFinalSupervisor4": "Bei Fragen oder Problemen wende dich gern an die Teilnehmendenbetreuung. Du findest die Kontaktdaten auf der Konferenzwebsite.",
+	"assistantFlowFinalSupervisorAnswerWait1": "Dann bestimme bitte eine*n Schüler*in zur Delegationsleitung und lasse diese*n die Delegation anlegen. Danach kannst du der Delegation als Betreuer*in beitreten, indem du dir von der Delegationsleitung den Beitrittscode geben lässt.",
+	"assistantFlowFinalSupervisorAnswerWait2": "Wenn du deine Schüler*innen auf mehrere Delegationen aufteilen möchtest, kannst du den Prozess mehrfach wiederholen. Du kannst dann allen Delegationen als Betreuer*in beitreten.",
 	"assistantFlowFinalSupervisorAnswerWait3": "Bei Fragen oder Problemen wende dich bitte an die Teilnehmendenbetreuung des Projektes. Du findest die Kontaktdaten auf der Konferenz-Website.",
 	"assistantFlowParticipantOrSupervisor1": "Hallo! Ich bin der Anmeldeassistent von MUNify, der gemeinsamen Anmeldeplattform für MUN-SH und MUNBW. Ich helfe dir bei der Wahl der richtigen Anmeldung.",
 	"assistantFlowParticipantOrSupervisor2": "Möchtest du selbst an der Konferenz teilnehmen und eine Rolle in der Simulation einnehmen? Oder bist du z. B. eine Lehrkraft und möchtest dich als Betreuer*in anmelden, ohne selbst teilzunehmen?",
 	"assistantFlowParticipantOrSupervisorAnswer1": "Ich möchte selbst an der Konferenz teilnehmen.",
 	"assistantFlowParticipantOrSupervisorAnswer2": "Ich möchte nicht selbst teilnehmen, sondern mich als Betreuer*in anmelden.",
-	"assistantFlowPartnersCreatedDelegation1": "Wunderbar! Dann bist du hier genau richtig.",
-	"assistantFlowPartnersCreatedDelegation2": "Da die Anmeldung als Gruppe auch geschlossen stattfinden muss, musst du zunächst klären, ob schon jemand in deiner Gruppe eine Delegation erstellt hat, der du beitreten kannst.",
-	"assistantFlowPartnersCreatedDelegation3": "Der/die Ersteller*in einer Delegation wird automatisch zur Delegationsleiter*in",
-	"assistantFlowPartnersCreatedDelegation4": "Hast du schon eine*n Delegationsleiter*in, der/die bereits eine Delegation erstellt hat?",
-	"assistantFlowPartnersCreatedDelegationAnswer1": "Ja, es gibt bereits eine Delegation.",
-	"assistantFlowPartnersCreatedDelegationAnswer2": "Nein, noch hat niemand eine Delegation erstellt.",
+	"assistantFlowPartnersCreatedDelegation1": "Wunderbar! Als Gruppe seid ihr gemeinsam eine <em>Delegation</em>.",
+	"assistantFlowPartnersCreatedDelegation2": "Ihr müsst eure Delegation zusammen anmelden. Deshalb musst du zuerst herausfinden, ob schon jemand aus deiner Gruppe eine Delegation erstellt hat.",
+	"assistantFlowPartnersCreatedDelegation3": "Die Person, die eure Delegation erstellt hat, ist automatisch eure <em>Delegationsleitung</em>.",
+	"assistantFlowPartnersCreatedDelegation4": "Hast du schon eine Delegationsleitung, die für eure Gruppe eine Delegation erstellt hat?",
+	"assistantFlowPartnersCreatedDelegationAnswer1": "Ja, es gibt schon eine Delegation",
+	"assistantFlowPartnersCreatedDelegationAnswer2": "Nein, noch niemand von uns hat eine Delegation erstellt",
 	"assistantFlowRole1": "Herzlich willkommen – wir freuen uns auf dich! Du musst dir zunächst aussuchen, welche Rolle du auf der Konferenz einnehmen möchtest.",
 	"assistantFlowRole2": "Du kannst dir eine der folgenden Rollen aussuchen:",
 	"assistantFlowRoleDelegate1": "Delegierte*r eines Staates",
 	"assistantFlowRoleDelegate2": "Als Delegierte*r vertrittst du die konkreten Interessen eines Staates in einem Gremium. Zum Beispiel: <em>Schweden im Wirtschafts- und Sozialrat</em> oder <em>Kenia in der Generalversammlung</em>.",
-	"assistantFlowRoleNSA1": "Vertreter*in eine*r NA",
-	"assistantFlowRoleNSA2": "Als Vertreter*in eine*r Nichtstaatlichen Akteur*in (NA) vertrittst du eine Organisation.",
-	"assistantFlowRoleNSA3": "Dabei bist du nicht an ein bestimmtes Gremium gebunden sondern kannst in den Gremien einfluss nehmen, die für deine Organisation die wichtigsten Themen behandeln",
+	"assistantFlowRoleNSA1": "Vertreter*in eines nichtstaatlichen Akteurs",
+	"assistantFlowRoleNSA2": "Du vertrittst eine*n nichtstaatliche*n Akteur*in, zum Beispiel <em>Ärzte ohne Grenzen</em> oder <em>Greenpeace International</em>.",
+	"assistantFlowRoleNSA3": "Du kannst dich frei zwischen allen Gremien bewegen und immer dort mitarbeiten, wo gerade die für deine Organisation wichtigsten Themen besprochen werden.",
 	"assistantFlowRolePress1": "Journalist*in",
 	"assistantFlowRolePress2": "Als Journalist*in der Konferenzpresse berichtest du über die Geschehnisse in den Gremien.",
-	"assistantFlowRolePress3": "Du schreibst Artikel und Kommentare und produzierst auch Fernsehnachrichten, die an den Abenden der Konferenz gezeigt werden.",
+	"assistantFlowRolePress3": "Du schreibst Artikel für die Printzeitung oder produzierst die Fernsehnachrichten, die an den Konferenzabenden gezeigt werden.",
 	"assistantFlowRoleOther1": "Andere spezielle Rolle",
-	"assistantFlowRoleOther2": "Manchmal werden bei unseren Konferenzen auch noch spezielle Rollen angeboten, die nicht in die oben genannten Kategorien passen.",
-	"assistantFlowRoleOther3": "Diese können zum Beispiel <em>Richter*in am IGH</em> sein.",
-	"assistantFlowRoleOther4": "Ob es solche Angebote wie die Simulation einer Krise oder des Internationalen Gerichtshofs gibt, erfährst du auf der Website der Konferenz bzw. bei den Auswahlmöglichkeiten der Einzelanmeldung.",
-	"assistantFlowRoleAnswer1": "Ich möchte als Delegierte*r eines Landes teilnehmen.",
-	"assistantFlowRoleAnswer2": "Ich möchte als Vertreter*in eines Nichtstaatlichen Akteurs teilnehmen.",
+	"assistantFlowRoleOther2": "Auf einigen Konferenzen gibt es spezielle Rollen, zum Beispiel die <em>Richter*innen am Internationalen Gerichtshof</em> oder besondere Gremien, die sich mit einer Krise befassen.",
+	"assistantFlowRoleOther3": "Ob es dieses Jahr solche Angebote gibt, erfährst du auf der Website der Konferenz.",
+	"assistantFlowRoleAnswer1": "Ich möchte als Delegierte*r eines Staates teilnehmen.",
+	"assistantFlowRoleAnswer2": "Ich möchte als Vertreter*in eines nichtstaatlichen Akteurs teilnehmen.",
 	"assistantFlowRoleAnswer3": "Ich möchte als Journalist*in der Konferenzpresse teilnehmen.",
-	"assistantFlowRoleAnswer4": "Ich möchte eine andere spezielle Rolle einnehmen (wenn verfügbar).",
-	"assistantFlowSupervisorUsersAlreadyRegistered1": "Sehr schön! Als betreuende Person kannst du nur bereits erstellte Delegationen überwachen.",
-	"assistantFlowSupervisorUsersAlreadyRegistered2": "Wichtig: Anders als früher müssen deine Schüler*innen die Delegation selbst erstellen. Du kannst den Delegationen anschließend mit dem Delegationscode als betreuende Person beitreten.",
-	"assistantFlowSupervisorUsersAlreadyRegistered3": "Haben deine Schüler*innen bereits Delegationen erstellt?",
+	"assistantFlowRoleAnswer4": "Ich möchte eine andere spezielle Rolle einnehmen.",
+	"assistantFlowSupervisorUsersAlreadyRegistered1": "Sehr schön! Als Betreuer*in kannst du die von deinen Schüler*innen erstellten Delegationen beaufsichtigen.",
+	"assistantFlowSupervisorUsersAlreadyRegistered2": "Wichtig: Anders als früher kannst du als Betreuer*in keine Delegation mehr für deine Schüler*innen anlegen, sondern die Schüler*innen müssen ihre Delegation selbst erstellen! Anschließend kannst du ihr mit dem Beitrittscode als Betreuer*in beitreten.",
+	"assistantFlowSupervisorUsersAlreadyRegistered3": "Haben deine Schüler*innen bereits eine Delegation erstellt?",
 	"assistantFlowSupervisorUsersAlreadyRegisteredAnswer1": "Ja, haben sie.",
 	"assistantFlowSupervisorUsersAlreadyRegisteredAnswer2": "Nein, noch nicht.",
 	"delegationHasAlreadyApplied": "Die Delegation hat ihre Bewerbung bereits abgeschickt.",
